--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -43,6 +43,7 @@
     <Compile Include="CategoryRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubCategoryRepo.cs" />
+    <Compile Include="TaxRepo.cs" />
     <Compile Include="Utility\SQL_Repo.cs" />
   </ItemGroup>
   <ItemGroup>
