--- a/MyLeoRetailerManager/MyLeoRetailerManager.csproj
+++ b/MyLeoRetailerManager/MyLeoRetailerManager.csproj
@@ -40,7 +40,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryManager.cs" />
+    <Compile Include="ColorManager.cs" />
     <Compile Include="CommonManager.cs" />
+    <Compile Include="EmployeeManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubCategoryManager.cs" />
   </ItemGroup>
