--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CategoryRepo.cs" />
+    <Compile Include="ColorRepo.cs" />
+    <Compile Include="EmployeeRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubCategoryRepo.cs" />
     <Compile Include="Utility\SQL_Repo.cs" />
