--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -44,7 +44,9 @@
     <Compile Include="Category\SubCategoryInfo.cs" />
     <Compile Include="Common\ExceptionInfo.cs" />
     <Compile Include="Common\FriendlyMessage.cs" />
+    <Compile Include="LookupInfo.cs" />
     <Compile Include="Common\Storeprocedures.cs" />
+    <Compile Include="Customer\CustomerInfo.cs" />
     <Compile Include="Enum_Collection.cs" />
     <Compile Include="GridInfo.cs" />
     <Compile Include="Interface\IGridInfo.cs" />
@@ -52,6 +54,7 @@
     <Compile Include="Pagination_Info.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryInfo.cs" />
+    <Compile Include="State\StateInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
