--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -42,7 +42,9 @@
   <ItemGroup>
     <Compile Include="BrandRepo.cs" />
     <Compile Include="CategoryRepo.cs" />
+    <Compile Include="CustomerRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StateRepo.cs" />
     <Compile Include="SubCategoryRepo.cs" />
     <Compile Include="Utility\SQL_Repo.cs" />
   </ItemGroup>
