--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -49,6 +49,7 @@
     <Compile Include="TaxRepo.cs" />
     <Compile Include="SizeGroupRepo.cs" />
     <Compile Include="Utility\SQL_Repo.cs" />
+    <Compile Include="VendorContactRepo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MyLeoRetailerInfo\MyLeoRetailerInfo.csproj">
