--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CategoryRepo.cs" />
     <Compile Include="ColorRepo.cs" />
     <Compile Include="EmployeeRepo.cs" />
+    <Compile Include="GiftVoucherRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubCategoryRepo.cs" />
     <Compile Include="TaxRepo.cs" />
