--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Color\ColorInfo.cs" />
     <Compile Include="Common\ExceptionInfo.cs" />
     <Compile Include="Common\FriendlyMessage.cs" />
+    <Compile Include="Common\LoginInfo.cs" />
     <Compile Include="Common\LookupInfo.cs" />
     <Compile Include="Common\Storeprocedures.cs" />
     <Compile Include="Employee\EmployeeInfo.cs" />
@@ -53,10 +54,10 @@
     <Compile Include="Interface\IGridInfo.cs" />
     <Compile Include="Interface\IQueryInfo.cs" />
     <Compile Include="Pagination_Info.cs" />
+    <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryInfo.cs" />
     <Compile Include="Tax\TaxInfo.cs" />
-    <Compile Include="VendorContact\VendorContactInfo.cs" />
     <Compile Include="Size\SizeGroupInfo.cs" />
   </ItemGroup>
   <ItemGroup>
