--- a/MyLeoRetailerManager/MyLeoRetailerManager.csproj
+++ b/MyLeoRetailerManager/MyLeoRetailerManager.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ColorManager.cs" />
     <Compile Include="CommonManager.cs" />
     <Compile Include="EmployeeManager.cs" />
+    <Compile Include="ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubCategoryManager.cs" />
   </ItemGroup>
