--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -40,7 +40,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Branch\BranchInfo.cs" />
-    <Compile Include="Alteration\AlterationInfo.cs" />
     <Compile Include="Brand\BrandInfo.cs" />
     <Compile Include="Category\CategoryInfo.cs" />
     <Compile Include="Category\SubCategoryInfo.cs" />
@@ -65,13 +64,11 @@
     <Compile Include="SalesInvoice\SalesInvoiceInfo.cs" />
     <Compile Include="Tax\TaxInfo.cs" />
     <Compile Include="VendorContact\VendorContactInfo.cs" />
-    <Compile Include="Vendor\VendorInfo.cs" />
     <Compile Include="Size\SizeGroupInfo.cs" />
     <Compile Include="Vendor\VendorInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Employee\" />
-    <Folder Include="VendorContact\" />
+    <Folder Include="Alteration\" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
