--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -58,6 +58,7 @@
     <Compile Include="TaxRepo.cs" />
     <Compile Include="SizeGroupRepo.cs" />
     <Compile Include="Utility\SQL_Repo.cs" />
+    <Compile Include="VendorContactRepo.cs" />
     <Compile Include="VendorRepo.cs" />
   </ItemGroup>
   <ItemGroup>
