--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -53,6 +53,7 @@
     <Compile Include="LoginRepo.cs" />
     <Compile Include="ProductRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoleRepo.cs" />
     <Compile Include="StateRepo.cs" />
     <Compile Include="SubCategoryRepo.cs" />
     <Compile Include="TaxRepo.cs" />
