Customer Brand commit

--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -53,12 +53,16 @@
     <Compile Include="Common\Storeprocedures.cs" />
     <Compile Include="Customer\CustomerInfo.cs" />
     <Compile Include="Employee\EmployeeInfo.cs" />
+    <Compile Include="Alteration\AlterationInfo.cs" />
     <Compile Include="Enum_Collection.cs" />
     <Compile Include="GiftVoucher\GiftVoucherInfo.cs" />
     <Compile Include="GridInfo.cs" />
     <Compile Include="Interface\IGridInfo.cs" />
     <Compile Include="Interface\IQueryInfo.cs" />
     <Compile Include="LookupInfo.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Pagination_Info.cs" />
     <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -71,7 +75,7 @@
     <Compile Include="Vendor\VendorInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Alteration\" />
+    <Folder Include="bin\Release\" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
