--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -223,9 +223,96 @@
     <Compile Include="Models\TaxViewModel.cs" />
     <Compile Include="Models\VendorContactViewModel.cs" />
     <Compile Include="Models\VendorViewModel.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Antlr3.Runtime.dll" />
+    <Content Include="bin\de\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\de\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\de\System.Spatial.resources.dll" />
+    <Content Include="bin\DotNetOpenAuth.AspNet.dll" />
+    <Content Include="bin\DotNetOpenAuth.AspNet.xml" />
+    <Content Include="bin\DotNetOpenAuth.Core.dll" />
+    <Content Include="bin\DotNetOpenAuth.Core.xml" />
+    <Content Include="bin\DotNetOpenAuth.OAuth.Consumer.dll" />
+    <Content Include="bin\DotNetOpenAuth.OAuth.Consumer.xml" />
+    <Content Include="bin\DotNetOpenAuth.OAuth.dll" />
+    <Content Include="bin\DotNetOpenAuth.OAuth.xml" />
+    <Content Include="bin\DotNetOpenAuth.OpenId.dll" />
+    <Content Include="bin\DotNetOpenAuth.OpenId.RelyingParty.dll" />
+    <Content Include="bin\DotNetOpenAuth.OpenId.RelyingParty.xml" />
+    <Content Include="bin\DotNetOpenAuth.OpenId.xml" />
+    <Content Include="bin\EntityFramework.dll" />
+    <Content Include="bin\EntityFramework.xml" />
+    <Content Include="bin\es\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\es\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\es\System.Spatial.resources.dll" />
+    <Content Include="bin\fr\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\fr\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\fr\System.Spatial.resources.dll" />
+    <Content Include="bin\it\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\it\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\it\System.Spatial.resources.dll" />
+    <Content Include="bin\ja\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\ja\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\ja\System.Spatial.resources.dll" />
+    <Content Include="bin\ko\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\ko\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\ko\System.Spatial.resources.dll" />
+    <Content Include="bin\Microsoft.Data.Edm.dll" />
+    <Content Include="bin\Microsoft.Data.Edm.xml" />
+    <Content Include="bin\Microsoft.Data.OData.dll" />
+    <Content Include="bin\Microsoft.Data.OData.xml" />
+    <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="bin\Microsoft.Web.Mvc.FixedDisplayModes.dll" />
+    <Content Include="bin\Microsoft.Web.WebPages.OAuth.dll" />
+    <Content Include="bin\Microsoft.Web.WebPages.OAuth.xml" />
+    <Content Include="bin\MyLeoRetailer.dll" />
+    <Content Include="bin\MyLeoRetailer.pdb" />
+    <Content Include="bin\MyLeoRetailerHelper.dll" />
+    <Content Include="bin\MyLeoRetailerHelper.pdb" />
+    <Content Include="bin\MyLeoRetailerInfo.dll" />
+    <Content Include="bin\MyLeoRetailerInfo.pdb" />
+    <Content Include="bin\MyLeoRetailerManager.dll" />
+    <Content Include="bin\MyLeoRetailerManager.pdb" />
+    <Content Include="bin\MyLeoRetailerRepo.dll" />
+    <Content Include="bin\MyLeoRetailerRepo.pdb" />
+    <Content Include="bin\Newtonsoft.Json.dll" />
+    <Content Include="bin\Newtonsoft.Json.xml" />
+    <Content Include="bin\ru\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\ru\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\ru\System.Spatial.resources.dll" />
+    <Content Include="bin\System.Spatial.dll" />
+    <Content Include="bin\System.Spatial.xml" />
+    <Content Include="bin\System.Web.Helpers.dll" />
+    <Content Include="bin\System.Web.Helpers.xml" />
+    <Content Include="bin\System.Web.Http.OData.dll" />
+    <Content Include="bin\System.Web.Http.OData.xml" />
+    <Content Include="bin\System.Web.Mvc.dll" />
+    <Content Include="bin\System.Web.Mvc.xml" />
+    <Content Include="bin\System.Web.Optimization.dll" />
+    <Content Include="bin\System.Web.Razor.dll" />
+    <Content Include="bin\System.Web.Razor.xml" />
+    <Content Include="bin\System.Web.WebPages.Deployment.dll" />
+    <Content Include="bin\System.Web.WebPages.Deployment.xml" />
+    <Content Include="bin\System.Web.WebPages.dll" />
+    <Content Include="bin\System.Web.WebPages.Razor.dll" />
+    <Content Include="bin\System.Web.WebPages.Razor.xml" />
+    <Content Include="bin\System.Web.WebPages.xml" />
+    <Content Include="bin\WebGrease.dll" />
+    <Content Include="bin\WebMatrix.Data.dll" />
+    <Content Include="bin\WebMatrix.Data.xml" />
+    <Content Include="bin\WebMatrix.WebData.dll" />
+    <Content Include="bin\WebMatrix.WebData.xml" />
+    <Content Include="bin\zh-Hans\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\zh-Hans\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\zh-Hans\System.Spatial.resources.dll" />
+    <Content Include="bin\zh-Hant\Microsoft.Data.Edm.resources.dll" />
+    <Content Include="bin\zh-Hant\Microsoft.Data.OData.resources.dll" />
+    <Content Include="bin\zh-Hant\System.Spatial.resources.dll" />
     <Content Include="Content\Atlant\assets\filetree\jqueryFileTree.asp" />
     <Content Include="Content\Atlant\assets\filetree\jqueryFileTree.aspx" />
     <Content Include="Content\Atlant\assets\filetree\jqueryFileTree.py" />
@@ -946,14 +1033,15 @@
     <Content Include="Content\Atlant\css\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Content\Atlant\js\plugins\jquery\jquery-2.1.1.min.map" />
     <Content Include="Content\Atlant\js\plugins\tableexport\simple_html_dom.php" />
-    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <Content Include="obj\Debug\MyLeoRetailer.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\MyLeoRetailer.dll" />
+    <Content Include="obj\Debug\MyLeoRetailer.pdb" />
     <Content Include="Scripts\generic.autocomplete.js" />
     <Content Include="Scripts\generic.custom.validation.js" />
     <Content Include="Scripts\generic.lookup.js" />
     <Content Include="Scripts\generic.popup.js" />
     <Content Include="Scripts\jquery-1.8.2.js" />
     <Content Include="Scripts\jquery-1.8.2.min.js" />
-    <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.js" />
     <Content Include="Scripts\jquery-ui-1.8.24.min.js" />
     <Content Include="Scripts\jquery.unobtrusive-ajax.js" />
@@ -965,16 +1053,16 @@
     <Content Include="Scripts\knockout-2.2.0.debug.js" />
     <Content Include="Scripts\knockout-2.2.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Scripts\Modules\Branch\branch_events.js" />
-    <Content Include="Scripts\Modules\Branch\branch_methods.js" />
-    <Content Include="Scripts\Modules\Branch\branch_validation.js" />
-    <Content Include="Scripts\Modules\Branch\search_branch_events.js" />
-    <Content Include="Scripts\Modules\Branch\search_branch_methods.js" />
     <Content Include="Scripts\Modules\Alteration\Alteration_events.js" />
     <Content Include="Scripts\Modules\Alteration\Alteration_methods.js" />
     <Content Include="Scripts\Modules\Alteration\Alteration_validation.js" />
     <Content Include="Scripts\Modules\Alteration\search_Alteration_events.js" />
     <Content Include="Scripts\Modules\Alteration\search_Alteration_methods.js" />
+    <Content Include="Scripts\Modules\Branch\branch_events.js" />
+    <Content Include="Scripts\Modules\Branch\branch_methods.js" />
+    <Content Include="Scripts\Modules\Branch\branch_validation.js" />
+    <Content Include="Scripts\Modules\Branch\search_branch_events.js" />
+    <Content Include="Scripts\Modules\Branch\search_branch_methods.js" />
     <Content Include="Scripts\Modules\Brand\brand_events.js" />
     <Content Include="Scripts\Modules\Brand\brand_methods.js" />
     <Content Include="Scripts\Modules\Brand\brand_validation.js" />
@@ -987,6 +1075,16 @@
     <Content Include="Scripts\Modules\Color\color_methods.js" />
     <Content Include="Scripts\Modules\Color\color_validation.js" />
     <Content Include="Scripts\Modules\common_methods.js" />
+    <Content Include="Scripts\Modules\Customer\customer_events.js" />
+    <Content Include="Scripts\Modules\Customer\customer_methods.js" />
+    <Content Include="Scripts\Modules\Customer\customer_validation.js" />
+    <Content Include="Scripts\Modules\Customer\search_customer_events.js" />
+    <Content Include="Scripts\Modules\Customer\search_customer_methods.js" />
+    <Content Include="Scripts\Modules\Employee\employee_events.js" />
+    <Content Include="Scripts\Modules\Employee\employee_methods.js" />
+    <Content Include="Scripts\Modules\Employee\employee_validation.js" />
+    <Content Include="Scripts\Modules\Employee\search_employee_event.js" />
+    <Content Include="Scripts\Modules\Employee\search_employee_method.js" />
     <Content Include="Scripts\Modules\GiftVoucher\giftvoucher_event.js" />
     <Content Include="Scripts\Modules\GiftVoucher\giftvoucher_methode.js" />
     <Content Include="Scripts\Modules\GiftVoucher\GiftVoucher_validation.js" />
@@ -998,6 +1096,9 @@
     <Content Include="Scripts\Modules\Product\product_validation.js" />
     <Content Include="Scripts\Modules\Product\search_product_event.js" />
     <Content Include="Scripts\Modules\Product\search_product_method.js" />
+    <Content Include="Scripts\Modules\Size\size_group_events.js" />
+    <Content Include="Scripts\Modules\Size\size_group_methods.js" />
+    <Content Include="Scripts\Modules\Size\size_group_validation.js" />
     <Content Include="Scripts\Modules\Tax\tax_events.js" />
     <Content Include="Scripts\Modules\Tax\tax_methods.js" />
     <Content Include="Scripts\Modules\Tax\Tax_validation.js" />
@@ -1006,19 +1107,16 @@
     <Content Include="Scripts\Modules\VendorContact\vendorcontact_events.js" />
     <Content Include="Scripts\Modules\VendorContact\vendorcontact_methode.js" />
     <Content Include="Scripts\Modules\VendorContact\vendorcontact_validation.js" />
-    <Content Include="Scripts\Modules\Employee\employee_events.js" />
-    <Content Include="Scripts\Modules\Employee\employee_methods.js" />
-    <Content Include="Scripts\Modules\Employee\employee_validation.js" />
-    <Content Include="Scripts\Modules\Employee\search_employee_event.js" />
-    <Content Include="Scripts\Modules\Employee\search_employee_method.js" />
-    <Content Include="Scripts\Modules\Size\size_group_events.js" />
-    <Content Include="Scripts\Modules\Size\size_group_methods.js" />
-    <Content Include="Scripts\Modules\Size\size_group_validation.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_events.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_methods.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_search_events.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_search_methods.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_validations.js" />
+    <Content Include="obj\Debug\build.force" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Debug\MyLeoRetailer.csprojResolveAssemblyReference.cache" />
+    <Content Include="bin\MyLeoRetailer.dll.config" />
+    <None Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -1028,7 +1126,6 @@
     <Content Include="Web.Release.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
-    <Content Include="Scripts\_references.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
     <Content Include="Images\heroAccent.png" />
@@ -1078,6 +1175,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="bin\Debug\" />
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 1\" />
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 2\folder 1\" />
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 2\folder 2\" />
@@ -1089,6 +1187,7 @@
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 5\" />
     <Folder Include="Content\Atlant\js\plugins\fileinput\fileinput\" />
     <Folder Include="Filters\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -1110,6 +1209,10 @@
       <Project>{4b31b810-2723-4309-8083-3cd7b3251355}</Project>
       <Name>MyLeoRetailerRepo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Scripts\jquery-1.8.2.intellisense.js" />
+    <None Include="Scripts\jquery.validate-vsdoc.js" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
