--- a/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
+++ b/MyLeoRetailerRepo/MyLeoRetailerRepo.csproj
@@ -51,6 +51,9 @@
     <Compile Include="GiftVoucherRepo.cs" />
     <Compile Include="CustomerRepo.cs" />
     <Compile Include="LoginRepo.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="ProductRepo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StateRepo.cs" />
@@ -66,6 +69,19 @@
       <Project>{c3ccc3af-1d9b-4672-bb4f-1a81fe4c99a8}</Project>
       <Name>MyLeoRetailerInfo</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <None Include="obj\Debug\MyLeoRetailerRepo.csprojResolveAssemblyReference.cache" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="obj\Debug\MyLeoRetailerRepo.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\MyLeoRetailerRepo.dll" />
+    <Content Include="obj\Debug\MyLeoRetailerRepo.pdb" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="bin\Release\" />
+    <Folder Include="obj\Debug\TempPE\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
