--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -987,9 +987,12 @@
     <Content Include="Scripts\Modules\PrintThis.js" />
     <Content Include="Scripts\Modules\Product\product_events.js" />
     <Content Include="Scripts\Modules\Product\product_methods.js" />
+    <Content Include="Scripts\Modules\Product\_ProductPricing\product_price_events.js" />
+    <Content Include="Scripts\Modules\Product\_ProductPricing\product_price_methods.js" />
     <Content Include="Scripts\Modules\Product\product_validation.js" />
     <Content Include="Scripts\Modules\Product\search_product_event.js" />
     <Content Include="Scripts\Modules\Product\search_product_method.js" />
+    <Content Include="Scripts\Modules\Product\_ProductPricing\product_price_validation.js" />
     <Content Include="Scripts\Modules\Tax\tax_events.js" />
     <Content Include="Scripts\Modules\Tax\tax_methods.js" />
     <Content Include="Scripts\Modules\Tax\Tax_validation.js" />
@@ -1056,6 +1059,7 @@
     <Content Include="Views\PostLogin\Master\GiftVoucher\Search.cshtml" />
     <Content Include="Views\PostLogin\Master\GiftVoucher\Print.cshtml" />
     <Content Include="Views\PreLogin\Login\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\Product\_ProductPrizing.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
