--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryInfo.cs" />
+    <Compile Include="Role\AccessFunctionInfo.cs" />
     <Compile Include="Role\RoleInfo.cs" />
     <Compile Include="SalesInvoice\SalesInvoiceInfo.cs" />
     <Compile Include="State\StateInfo.cs" />
