--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -181,8 +181,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Filters\AuthorizeUserAttribute.cs" />
     <Compile Include="Common\CustomRazorViewEngine.cs" />
     <Compile Include="Common\MessageStore.cs" />
+    <Compile Include="Filters\SessionExpireAttribute.cs" />
     <Compile Include="Controllers\PostLogin\AutocompleteLookup\AutocompleteLookupController.cs" />
     <Compile Include="Common\Utility.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -1032,6 +1034,7 @@
     <Content Include="Scripts\Modules\Vendor\vendor_search_events.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_search_methods.js" />
     <Content Include="Scripts\Modules\Vendor\vendor_validations.js" />
+    <Content Include="Log4Net.config" />
     <None Include="Scripts\_references.js" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -1091,6 +1094,8 @@
     <Content Include="Views\PostLogin\Master\Product\_ProductPrizing.cshtml" />
     <Content Include="Views\PostLogin\Dashboard\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Employee\Employee_Branch_Mapping.cshtml" />
+    <Content Include="Views\PreLogin\Home\AuthorizationError.cshtml" />
+    <Content Include="Views\PreLogin\Home\Error.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1104,7 +1109,6 @@
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 4\" />
     <Folder Include="Content\Atlant\assets\uploads\Welcome\folder 5\" />
     <Folder Include="Content\Atlant\js\plugins\fileinput\fileinput\" />
-    <Folder Include="Filters\" />
     <Folder Include="Scripts\Login\" />
   </ItemGroup>
   <ItemGroup>
