--- a/MyLeoRetailer/Web.config
+++ b/MyLeoRetailer/Web.config
@@ -7,7 +7,14 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    
   </configSections>
+
+  <log4net configSource="Log4Net.config" />
+  
+  
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-MyLeoRetailer-20160813232200;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-MyLeoRetailer-20160813232200.mdf" providerName="System.Data.SqlClient" />-->
   
