--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -181,6 +181,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\PostLogin\Transaction\PurchaseReturnRequestController.cs" />
     <Compile Include="Filters\AuthorizeUserAttribute.cs" />
     <Compile Include="Common\CustomRazorViewEngine.cs" />
     <Compile Include="Common\MessageStore.cs" />
@@ -239,6 +240,7 @@
     <Compile Include="Models\CustomerViewModel.cs" />
     <Compile Include="Models\SubCategoryViewModel.cs" />
     <Compile Include="Models\TaxViewModel.cs" />
+    <Compile Include="Models\Transaction\PurchaseReturnRequestViewModel.cs" />
     <Compile Include="Models\VendorContactViewModel.cs" />
     <Compile Include="Models\VendorViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -1042,6 +1044,11 @@
     <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_validation.js" />
     <Content Include="Scripts\Modules\PurchaseOrder\search_purchaseorder_events.js" />
     <Content Include="Scripts\Modules\PurchaseOrder\search_purchaseorder_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseReturnRequest\purchase-return-request-event.js" />
+    <Content Include="Scripts\Modules\PurchaseReturnRequest\purchase-return-request-method.js" />
+    <Content Include="Scripts\Modules\PurchaseReturnRequest\purchase-return-request-search-event.js" />
+    <Content Include="Scripts\Modules\PurchaseReturnRequest\purchase-return-request-search-method.js" />
+    <Content Include="Scripts\Modules\PurchaseReturnRequest\purchase-return-request-validation.js" />
     <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_events.js" />
     <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_methods.js" />
     <Content Include="Scripts\Modules\PurchaseReturn\purchasereturn_validation.js" />
@@ -1159,6 +1166,8 @@
     <Content Include="Views\PostLogin\Master\Receivable\Pay.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Pay.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\Index.cshtml" />
+    <Content Include="Views\PostLogin\Transaction\PurchaseReturnRequest\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
