--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseInvoice\PurchaseInvoiceInfo.cs" />
     <Compile Include="PurchaseOrder\PurchaseOrderInfo.cs" />
+    <Compile Include="PurchaseReturnRequest\PurchaseReturnRequestInfo.cs" />
     <Compile Include="PurchaseReturn\PurchaseReturnInfo.cs" />
     <Compile Include="QueryInfo.cs" />
     <Compile Include="Receivable\ReceivableInfo.cs" />
