Purchase Order Request

--- a/MyLeoRetailer/MyLeoRetailer.csproj
+++ b/MyLeoRetailer/MyLeoRetailer.csproj
@@ -181,6 +181,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\PostLogin\Master\PurchaseOrderRequestController.cs" />
     <Compile Include="Filters\AuthorizeUserAttribute.cs" />
     <Compile Include="Common\CustomRazorViewEngine.cs" />
     <Compile Include="Common\MessageStore.cs" />
@@ -229,6 +230,7 @@
     <Compile Include="Models\LookupViewModel.cs" />
     <Compile Include="Models\GiftVoucherViewModel.cs" />
     <Compile Include="Models\PurchaseInvoiceViewModel.cs" />
+    <Compile Include="Models\PurchaseOrderRequestViewModel.cs" />
     <Compile Include="Models\PurchaseOrderViewModel.cs" />
     <Compile Include="Models\ReceivableViewModel.cs" />
     <Compile Include="Models\PurchaseReturnViewModel.cs" />
@@ -1037,6 +1039,11 @@
     <Content Include="Scripts\Modules\PurchaseInvoice\purchaseinvoice_validation.js" />
     <Content Include="Scripts\Modules\PurchaseInvoice\search_purchaseinvoice_events.js" />
     <Content Include="Scripts\Modules\PurchaseInvoice\search_purchaseinvoice_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseOrderRequest\purchaseorderrequest_events.js" />
+    <Content Include="Scripts\Modules\PurchaseOrderRequest\purchaseorderrequest_methods.js" />
+    <Content Include="Scripts\Modules\PurchaseOrderRequest\purchaseorderrequest_validation.js" />
+    <Content Include="Scripts\Modules\PurchaseOrderRequest\search_purchaseorderrequest_events.js" />
+    <Content Include="Scripts\Modules\PurchaseOrderRequest\search_purchaseorderrequest_methods.js" />
     <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_events.js" />
     <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_methods.js" />
     <Content Include="Scripts\Modules\PurchaseOrder\purchaseorder_validation.js" />
@@ -1159,6 +1166,8 @@
     <Content Include="Views\PostLogin\Master\Receivable\Pay.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Index.cshtml" />
     <Content Include="Views\PostLogin\Master\Payable\Pay.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseOrderRequest\Index.cshtml" />
+    <Content Include="Views\PostLogin\Master\PurchaseOrderRequest\Search.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
