--- a/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
+++ b/MyLeoRetailerInfo/MyLeoRetailerInfo.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Product\ProductInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseInvoice\PurchaseInvoiceInfo.cs" />
+    <Compile Include="PurchaseOrderRequest\PurchaseOrderRequestInfo.cs" />
     <Compile Include="PurchaseOrder\PurchaseOrderInfo.cs" />
     <Compile Include="PurchaseReturn\PurchaseReturnInfo.cs" />
     <Compile Include="QueryInfo.cs" />
